fix: fix service page look on small screens

--- a/public/_sass/_main.scss
+++ b/public/_sass/_main.scss
@@ -2,9 +2,11 @@ main {
     padding-top: 3rem;
     color: #5a5a5a;
 
-    .col-lg-4 {
-        margin-bottom: 1.5rem;
-        text-align: center;
+    .service-row {
+        .col-sm-4 {
+            margin-bottom: 1.5rem;
+            text-align: center;
+        }
     }
 
     .marketing h2 {
